syntax = "proto3";

import "common_api.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

package app.improving.tenantcontext.tenant;

enum ApiTenantStatus {
    API_TENANT_STATUS_DRAFT = 0;
    API_TENANT_STATUS_ACTIVE = 1;
    API_TENANT_STATUS_SUSPENDED = 2;
    API_TENANT_STATUS_RELEASED = 3;
}

message ApiTenant {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    string name =  2;
    ApiContact primary_contact = 3;
    ApiInfo info = 4;
    ApiMetaInfo meta = 5;
    ApiTenantStatus status = 6;
}

message ApiInfo {
    string name = 1;
    ApiContact primary_contact = 2;
    ApiAddress address = 3;
}

message ApiMetaInfo {
    google.protobuf.Timestamp created_on = 1;
    ApiContact created_by = 2;
    google.protobuf.Timestamp last_updated = 3;
    ApiMemberId last_updated_by = 4;
    ApiTenantStatus current_status = 5;
}

message ApiPrimaryContactUpdated {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiContact old_contact = 2;
    ApiContact new_contact = 3;
    ApiMetaInfo meta = 4;
}

message ApiTenantActivated {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    string name = 2;
    ApiMetaInfo meta = 3;
}

message ApiTenantEstablished {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiInfo info = 2;
    ApiMetaInfo meta = 3;
    string name = 4;
    ApiContact primary_contact = 5;
}

message ApiTenantNameChanged {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    string old_name = 2;
    string new_name = 3;
    ApiMetaInfo meta = 4;
}

message ApiEstablishTenant {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiInfo info = 2;
}

message ApiActivateTenant {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId updating_user = 2;
}

message ApiSuspendTenant {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId updating_user = 2;
}

message ApiReleaseTenant {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId releasing_user = 2;
}

message ApiUpdatePrimaryContact {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    ApiContact new_contact = 2;
    ApiMemberId updating_user = 3;
}

message ApiChangeTenantName {
    string tenant_id = 1 [(kalix.field).entity_key = true];
    string new_name = 2;
    ApiMemberId updating_user = 3;
}

message ApiGetTenantById {
    string tenant_id = 1 [(kalix.field).entity_key = true];
}
