syntax = "proto3";

import "app/improving/common/common_domain.proto";
import "google/protobuf/timestamp.proto";

package app.improving.tenantcontext;

enum TenantStatus {
    DRAFT = 0;
    ACTIVE = 1;
    SUSPENDED = 2;
}

message Info {
    string name = 1;
    Contact primaryContact = 2;
    Address address = 3;
}

message MetaInfo {
    google.protobuf.Timestamp createdOn = 1;
    Contact createdBy = 2;
    google.protobuf.Timestamp lastUpdated = 3;
    MemberId lastUpdatedBy = 4;
    TenantStatus currentStatus = 5;
}

message PrimaryContactUpdated {
    TenantId tenantId = 1;
    Contact oldContact = 2;
    Contact newContact = 3;
    MetaInfo meta = 4;
}

message TenantActivated {
    TenantId tenantId = 1;
    string name = 2;
    MetaInfo meta = 3;
}

message TenantEstablished {
    TenantId tenantId = 1;
    Info info = 2;
    MetaInfo meta = 3;
    string name = 4;
    Contact primaryContact = 5;
}

message TenantNameChanged {
    TenantId tenantId = 1;
    string oldName = 2;
    string newName = 3;
    MetaInfo meta = 4;
}

message TenantSuspended {
    TenantId tenantId = 1;
    string name = 2;
    MetaInfo meta = 3;
}